# nixel

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.rs  buildkite.yaml  flake.lock.license  flake.nix
.reuse/: dep5
src/: ast.rs  cst.rs  deps.rs  expression.rs  ffi.rs  grammar.rs  lexer.rs  lib.rs  main.rs  mem.rs  parse.rs  types.hh  utils.cc  utils.hh
src/lexer/: generator.l  prelude.cc
src/parser/: generator.y  parse.cc  prelude.cc  requires.cc
src/types/: assert.rs  binary_operation.rs  binary_operator.rs  binding.rs  error.rs  expression.rs  float.rs  function.rs  function_application.rs  function_head.rs  function_head_destructured_argument.rs  function_head_destructured_identifier.rs  has_attribute.rs  identifier.rs  if_then_else.rs  indented_string.rs  integer.rs  let_in.rs  list.rs  map.rs  mod.rs  parsed.rs  part.rs  path.rs  position.rs  property_access.rs  search_nix_path.rs  span.rs  string.rs  trivia.rs  unary_operation.rs  unary_operator.rs  uri.rs  with.rs
tests/: generate.sh  parse.rs  run.rs  run.sh
tests/cases/: manual-empty.nix.txt  manual-invalid-path-1.nix.txt  manual-invalid-path-3.nix.txt  manual-invalid-path-4.nix.txt  manual-invalid-path-5.nix.txt  manual-readme.nix.txt  manual-trailing-period.nix.txt  nixpkgs-default.nix.txt  nixpkgs-doc-default.nix.txt  nixpkgs-doc-doc-support-default.nix.txt  nixpkgs-doc-doc-support-lib-function-docs.nix.txt  nixpkgs-doc-doc-support-lib-function-locations.nix.txt  nixpkgs-doc-shell.nix.txt  nixpkgs-flake.nix.txt  nixpkgs-lib-ascii-table.nix.txt  nixpkgs-lib-asserts.nix.txt  nixpkgs-lib-attrsets.nix.txt  nixpkgs-lib-cli.nix.txt  nixpkgs-lib-customisation.nix.txt  nixpkgs-lib-debug.nix.txt  nixpkgs-lib-default.nix.txt  nixpkgs-lib-deprecated.nix.txt  nixpkgs-lib-derivations.nix.txt  nixpkgs-lib-fetchers.nix.txt  nixpkgs-lib-filesystem.nix.txt  nixpkgs-lib-fixed-points.nix.txt  nixpkgs-lib-flake.nix.txt  nixpkgs-lib-generators.nix.txt  nixpkgs-lib-kernel.nix.txt  nixpkgs-lib-licenses.nix.txt  nixpkgs-lib-lists.nix.txt  nixpkgs-lib-meta.nix.txt  nixpkgs-lib-minver.nix.txt  nixpkgs-lib-modules.nix.txt  nixpkgs-lib-options.nix.txt  nixpkgs-lib-source-types.nix.txt  nixpkgs-lib-sources.nix.txt  nixpkgs-lib-strings-with-deps.nix.txt  nixpkgs-lib-strings.nix.txt  nixpkgs-lib-systems-architectures.nix.txt  (+963 more)
tests/cases/default.nix/: asts
tests/cases/doc-default.nix/: asts
tests/cases/doc-doc-support-default.nix/: asts
tests/cases/doc-doc-support-lib-function-docs.nix/: asts
tests/cases/doc-doc-support-lib-function-locations.nix/: asts
tests/cases/doc-shell.nix/: asts
tests/cases/flake.nix/: asts
tests/cases/lib-asserts.nix/: asts
tests/cases/lib-attrsets.nix/: asts
tests/cases/lib-cli.nix/: asts
tests/cases/lib-customisation.nix/: asts
tests/cases/lib-debug.nix/: asts
tests/cases/lib-default.nix/: asts
tests/cases/lib-deprecated.nix/: asts
tests/cases/lib-fetchers.nix/: asts
tests/cases/lib-filesystem.nix/: asts
tests/cases/lib-fixed-points.nix/: asts
tests/cases/lib-flake.nix/: asts
tests/cases/lib-generators.nix/: asts
tests/cases/lib-kernel.nix/: asts
tests/cases/lib-licenses.nix/: asts
tests/inputs/: update-nixpkgs.sh
(+2233 files in other folders)
