[dependencies.clap]
default-features = false
features = ["std"]
optional = true
package = "clap"
version = "3"

[dependencies.santiago]
default-features = false
features = ["crate_regex"]
package = "santiago"
version = "1"

[features]
default = ["cli"]
cli = ["clap"]

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
categories = [
  "command-line-utilities",
  "data-structures",
  "parser-implementations",
  "text-processing"
]
description = "Lexer, Parser, Abstract Syntax Tree and Concrete Syntax Tree for the Nix Expressions Language."
edition = "2021"
keywords = ["cli", "parser", "serde", "serialization", "text"]
license = "AGPL-3.0-only"
name = "nixel"
repository = "https://github.com/kamadorueda/nixel"
version = "1.0.1"

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "nixel"
required-features = ["cli"]
