# SPDX-FileCopyrightText: 2022 Kevin Amado <kamadorueda@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-only
[dependencies.clap]
default-features = false
features = ["std"]
optional = true
version = "3"

[dependencies.santiago]
default-features = false
features = ["crate_regex"]
version = "1"

[dev-dependencies.walkdir]
version = "2"

[features]
default = ["cli"]
cli = ["clap"]

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
categories = [
  "command-line-utilities",
  "data-structures",
  "parser-implementations",
  "text-processing"
]
description = "Lexer, Parser, Abstract Syntax Tree and Concrete Syntax Tree for the Nix Expressions Language."
edition = "2021"
keywords = ["cli", "parser", "serde", "serialization", "text"]
license = "AGPL-3.0-only"
name = "nixel"
repository = "https://github.com/kamadorueda/nixel"
version = "4.0.0"

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "nixel"
required-features = ["cli"]
