# SPDX-FileCopyrightText: 2022 Kevin Amado <kamadorueda@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-only
[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
categories = [
  "command-line-utilities",
  "data-structures",
  "parser-implementations",
  "text-processing"
]
description = "Parser for the Nix Expressions Language"
edition = "2021"
keywords = ["cli", "parser", "serde", "serialization", "text"]
license = "GPL-3.0-only"
name = "nixel"
repository = "https://github.com/kamadorueda/nixel"
version = "5.0.0"

[build-dependencies.bindgen]
version = "0"
default-features = false

[build-dependencies.cc]
version = "1"
default-features = false

[dependencies.clap]
version = "4"
default-features = false
features = ["std", "help", "usage"]

[dependencies.serde]
version = "1"
optional = true
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true
default-features = false
features = ["std"]

[dev-dependencies.walkdir]
version = "2"
default-features = false

[features]
default = ["all"]
all = ["serde", "serde_json"]

[[bin]]
name = "nixel"
required-features = ["all"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.release.build-override]
codegen-units = 1
opt-level = 3
